<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="7dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/logout_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/logout_text_confirmation"
            android:textColor="#000"
            android:layout_marginLeft="7dp"
            android:textSize="13sp"
            />


        <TextView
            android:id="@+id/logout_yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logout_title_text"
            android:padding="20dp"
            android:text="@string/logout_yes"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:layout_alignParentRight="true" />


        <TextView
            android:id="@+id/logout_noBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logout_title_text"
            android:layout_toLeftOf="@+id/logout_yesBtn"
            android:padding="20dp"
            android:text="@string/logout_no"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:layout_toStartOf="@+id/logout_yesBtn" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>