<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/EditToolbar"
        layout="@layout/edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">


        <RelativeLayout
            android:id="@+id/mainRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp">


            <RelativeLayout
                android:id="@+id/relative_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                >


                <ImageView
                    android:id="@+id/img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/client" />


                <TextView
                    android:id="@+id/patient_name_intent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/img"
                    android:layout_toRightOf="@+id/img"
                    android:padding="5dp"
                    android:layout_marginLeft="3dp"
                    android:text=""
                    android:textSize="16sp" />


            </RelativeLayout>


            <View
                android:id="@+id/line_top"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/relative_top"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#F3F3F3" />

            <RelativeLayout
                android:id="@+id/rlative_sysm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_top"
                android:padding="3dp">


                <TextView
                    android:id="@+id/symptoms_Description_intent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="13sp"

                    />


            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rlative_sysm"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#F3F3F3" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlative_sysm"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iconHistory"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_history" />


                <TextView
                    android:id="@+id/date_Appn_intent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/iconHistory"
                    android:text="2019-01-02"
                    android:textColor="#565656"
                    android:textSize="11sp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_btn"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btns"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/modifyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modify_btn"
            android:textSize="13sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/bg_modify"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/convertBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_consultation"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_convert"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />


    </LinearLayout>
</LinearLayout>